--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
 </head>
+
 <body>
-    
+    <div class="card">
+        <div>
+            <img src="./images/icon-star.svg" alt="icone de uma estrela laranja">
+        </div>
+
+        <h1>como foi o atendimento?</h1>
+
+        <p>conte-nos como foi nossa ajuda com sua solicitação. agradecemos muito seu feedback para podermos melhorar
+            nosso atendimento</p>
+
+            <div>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+            </div>
+    </div>
 </body>
+
 </html>
