--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="card">
-        <div>
+        <div class="estrela">
             <img src="./images/icon-star.svg" alt="icone de uma estrela laranja">
         </div>
 
@@ -18,13 +18,15 @@
         <p>conte-nos como foi nossa ajuda com sua solicitação. agradecemos muito seu feedback para podermos melhorar
             nosso atendimento</p>
 
-            <div>
+            <div class="notas">
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
                 <button>4</button>
                 <button>5</button>
             </div>
+
+            <button>Enviar</button>
     </div>
 </body>
 
