quato commit do HTML e primeiro commit do CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <title>Feedback</title>
 </head>
 
@@ -18,15 +23,15 @@
         <p>conte-nos como foi nossa ajuda com sua solicitação. agradecemos muito seu feedback para podermos melhorar
             nosso atendimento</p>
 
-            <div class="notas">
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-            </div>
+        <div class="notas">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+        </div>
 
-            <button>Enviar</button>
+        <button>Enviar</button>
     </div>
 </body>
 
