sexto commit do index.html e primeiro commit do agradecimeno.html e primeiro commit do agradecimento.css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
        
-        <a href="">Enviar</a>
+        <a href="./pages/agradecimento.HTML">Enviar</a>
     </div>
 </body>
 
